@@ -419,10 +419,16 @@ class TreeTemplateTools
         clone->addSon(* cloneSubtree<N>(tree, sonsId[i]));
       }
       //Must copy all properties too:
-      vector<string> names = tree.getPropertyNames(nodeId);
+      vector<string> names;
+      names = tree.getNodePropertyNames(nodeId);
       for(unsigned int i = 0; i < names.size(); i++)
       {
-        clone->setProperty(names[i], tree.getProperty(nodeId, names[i]));
+        clone->setNodeProperty(names[i], tree.getNodeProperty(nodeId, names[i]));
+      }
+      names = tree.getBranchPropertyNames(nodeId);
+      for(unsigned int i = 0; i < names.size(); i++)
+      {
+        clone->setBranchProperty(names[i], tree.getBranchProperty(nodeId, names[i]));
       }
       
       return clone;
